Fix Player's Name dropdown selection
Add missing selectedPlayerName case to selectOption function to enable dropdown option selection

--- a/public/admin.html
+++ b/public/admin.html
@@ -1071,6 +1071,8 @@
                 selectedText = container.querySelector('#selectedSubmissionStyle');
             } else if (container.querySelector('#selectedEliminatedPlayers')) {
                 selectedText = container.querySelector('#selectedEliminatedPlayers');
+            } else if (container.querySelector('#selectedPlayerName')) {
+                selectedText = container.querySelector('#selectedPlayerName');
             } else {
                 selectedText = container.querySelector('#selectedMode');
             }
