--- a/public/admin.html
+++ b/public/admin.html
@@ -670,6 +670,7 @@
                             <th>Name</th>
                             <th>Status</th>
                             <th>Voted</th>
+                            <th>Delete</th>
                         </tr>
                     </thead>
                     <tbody id="playersTableBody">
@@ -871,6 +872,14 @@
                     <td class="editable-name" data-player-id="${player.id}" data-field="name">${player.name}</td>
                     <td class="status-toggle" data-player-id="${player.id}" style="cursor: pointer;">${player.status}</td>
                     <td class="editable-voted" data-player-id="${player.id}" data-field="voted">${player.voted !== undefined && player.voted !== null ? player.voted : ''}</td>
+                    <td style="text-align: center;">
+                        <button class="icon-btn" title="Delete Player" onclick="deletePlayer(${player.id})" style="padding: 8px;">
+                            <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M3 6h18M8 6V4a2 2 0 012-2h4a2 2 0 012 2v2m3 0v14a2 2 0 01-2 2H7a2 2 0 01-2-2V6h14z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M10 11v6M14 11v6" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                        </button>
+                    </td>
                 </tr>
             `).join('');
 
@@ -1269,7 +1278,7 @@
                     name: `Player ${newPlayerNumber}`,
                     photoUrl: null,
                     status: 'Active',
-                    voted: '0 lbs'
+                    voted: 0
                 };
                 console.log('Adding new player:', newPlayer);
                 const result = await addPlayer(newPlayer);
@@ -1278,6 +1287,33 @@
                 console.log('Table reloaded');
             } catch (error) {
                 console.error('Error adding player:', error);
+            }
+        }
+
+        async function deletePlayer(playerId) {
+            if (!confirm('Are you sure you want to delete this player? This action cannot be undone.')) {
+                return;
+            }
+
+            try {
+                const response = await fetch('/api/players', {
+                    method: 'DELETE',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({ id: playerId })
+                });
+
+                const result = await response.json();
+
+                if (result.success) {
+                    await loadPlayersTable();
+                } else {
+                    alert('Error deleting player');
+                }
+            } catch (error) {
+                console.error('Error deleting player:', error);
+                alert('Error deleting player');
             }
         }
 
