--- a/public/admin.html
+++ b/public/admin.html
@@ -841,7 +841,7 @@
                             <td>001</td>
                             <td>002</td>
                             <td>15 lbs</td>
-                            <td>2025-01-22 14:35:22</td>
+                            <td>Jan 22, 2025 - 14:35:22</td>
                         </tr>
                     </tbody>
                 </table>
@@ -1257,6 +1257,24 @@
                 }
             };
             reader.readAsDataURL(file);
+        }
+
+        // Date formatting helper for voting table
+        function formatVotingDate(dateString) {
+            // Input: "2025-01-22 14:35:22" or Date object
+            // Output: "Jan 22, 2025 - 14:35:22"
+            const date = typeof dateString === 'string' ? new Date(dateString) : dateString;
+
+            const months = ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'];
+            const month = months[date.getMonth()];
+            const day = date.getDate();
+            const year = date.getFullYear();
+
+            const hours = String(date.getHours()).padStart(2, '0');
+            const minutes = String(date.getMinutes()).padStart(2, '0');
+            const seconds = String(date.getSeconds()).padStart(2, '0');
+
+            return `${month} ${day}, ${year} - ${hours}:${minutes}:${seconds}`;
         }
 
         // Players management
