--- a/public/admin.html
+++ b/public/admin.html
@@ -893,6 +893,22 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="form-group">
+                        <label class="field-label">Timer Duration</label>
+                        <div class="combobox-container">
+                            <div class="combobox" onclick="toggleCombobox(this)">
+                                <span id="selectedTimerVisibility">Show</span>
+                                <svg width="12" height="8" viewBox="0 0 12 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1 1.5L6 6.5L11 1.5" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                            </div>
+                            <div class="combobox-options">
+                                <div class="combobox-option" onclick="selectOption(this, 'show')">Show</div>
+                                <div class="combobox-option" onclick="selectOption(this, 'hide')">Hide</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Middle Column (Empty) -->
@@ -1101,6 +1117,10 @@
                     document.getElementById('selectedEliminatedPlayers').textContent = config.eliminatedPlayers.charAt(0).toUpperCase() + config.eliminatedPlayers.slice(1);
                 }
 
+                if (config.timerVisibility) {
+                    document.getElementById('selectedTimerVisibility').textContent = config.timerVisibility.charAt(0).toUpperCase() + config.timerVisibility.slice(1);
+                }
+
                 // Update input values
                 if (config.voteIncrement !== undefined) {
                     document.getElementById('voteIncrement').value = config.voteIncrement;
@@ -1262,6 +1282,7 @@
                     submissionStyle: document.querySelector('#selectedSubmissionStyle')?.textContent.toLowerCase().replace(/ /g, '-') || 'instant-submit',
                     playerName: document.querySelector('#selectedPlayerName')?.textContent.toLowerCase() || 'show',
                     eliminatedPlayers: document.querySelector('#selectedEliminatedPlayers')?.textContent.toLowerCase() || 'show',
+                    timerVisibility: document.querySelector('#selectedTimerVisibility')?.textContent.toLowerCase() || 'show',
                     voteIncrement: parseInt(document.getElementById('voteIncrement')?.value) || 15,
                     unit: document.getElementById('unit')?.value || 'lbs',
                     timerDuration: parseInt(document.getElementById('timerDuration')?.value) || 60,
